--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,8 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+body {
+  background-color: rgb(48, 48, 48);
+  color: white;
+}
